tests/paczka1/fuzzy1/45363912.err
Error in line 4: BKe A298 27,8
Error in line 1: A420 S339 4,0
Error in line 6: A420 A420 78,0
Error in line 10: g9c4 S300 195,42
Error in line 5: BKe S300 13,3
Error in line 14: BKe A298 22,5
Error in line 17: aZtaaJjjkC6 S300 40,4
Error in line 19: 3xjzYMC S339 85,4
Error in line 16: P1PdMV S339 47,7
Error in line 26: P1PdMV S300 70,9
Error in line 31: A420 S300 88,5
Error in line 33: P1PdMV S339 33,6
Error in line 18: g9c4 S300 75,7
